# DATN_gateway

./: CMakeLists.txt  README.md  sdkconfig
common/app_config/: CMakeLists.txt
common/mqtt/: CMakeLists.txt  app_mqtt.c
common/sx1278_ra02/: ra02.c  ra02.h
main/: CMakeLists.txt
